--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -7,16 +7,17 @@
 :root {
   --background: #ffffff;
   --foreground: #f27b48;
+  --secondary: #FCF4EC;
   --global-color-title: #121212;
   --global-color-text: #616161;
 
   --primary-color: #f27b48;
-  --secondary-color: #FCF4EC;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-secondary: var(--secondary);
   --color-text: var(--global-color-text);
 }
 
@@ -39,16 +40,3 @@ body {
   color: var(--secondary-color);
   background: var(--foreground);
 }
-
-.Tab {
-  background-color: #f0f0f0;
-  border-bottom: 2px solid #ccc;
-  padding: 10px;
-}
-
-.Tab.active {
-  background-color: #fff;
-  border-bottom: 2px solid #337ab7;
-  padding: 10px;
-}
-
